# demrock

./: .gitignore  Cargo.toml  README.md
assets/: config.ron  config.toml
assets/levels/: levels.ron  levels.toml
src/: config.rs  game.rs  gui.rs  input.rs  main.rs
src/game/: camera.rs  collision.rs  gamestate.rs  level.rs  player.rs  sound.rs  timer.rs
src/gui/: button.rs  credits.rs  main_menu.rs  options.rs  style.rs
