[package]
name = "macroquadtest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gilrs = "0.10.7"
macroquad = { version = "=0.4.8", features = ["audio"] }
ron = "0.8.1"
rustc-hash = "2.0.0"
serde = { version = "1.0.202", features = ["derive"] }

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gc"
ar = "x86_64-w64-mingw32-gcc-ar"
